--- a/powtórka/index.html
+++ b/powtórka/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jquery Ajax</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+    <button id="get">Pobierz ogłoszenia</button>
+    <div class="offers"></div>
+    <!--tutaj wstawiamy ogłoszenia-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/index.js"></script>
 </body>
